<resources>
    <string name="app_name">Firebase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="Email">EMIAL</string>
    <string name="Password">PASSWORD</string>
    <string name="Username">USERNAME</string>
    <string name="DOB">BIRTHDAY</string>
    <string name="Signup">Signup</string>
    <string name="SignUp">SIGN UP</string>
    <string name="First_Name">FIRST NAME</string>
    <string name="Last_Name">LAST NAME</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="Sign">ALREADY HAVE AN ACCOUNT? </string>
    <string name="Sign_In">Sign In</string>
    <string name="dont_have_ac">DO NOT HAVE AN ACCOUNT? </string>

    <!--Main Feed-->
    <string name="Name">Abhishek</string>
    <string name="L_Name">Vadodariya</string>
    <string name="Date">06-feb-1995</string>

    <!--Navigation Drawer-->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!--Update Activity-->
    <string name="update">UPDATE</string>

    <!--Profile Activity-->
    <string name="profile">PROFILE</string>
    <string name="ex_email">abhishek.vadodariya@gmail.com</string>
    <string name="ex_bod">6-feb-1995</string>
</resources>
