<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/feed_profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@mipmap/logo"
        app:civ_border_color="#FF000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feed_f_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textColor="@color/Black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/feed_l_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/L_Name"
                android:textColor="@color/Black"
                android:textSize="15sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/feed_bod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textColor="@color/hint_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/emial_recy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_email"
            android:textColor="@color/hint_text"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>