<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_close" />

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/Signup"
            android:textColor="@color/Black"
            android:textSize="15dp" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@mipmap/logo"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/add_ProfileImg"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="22dp"
            android:src="@mipmap/add_circle" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/Edt_signup_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/First_Name"
                android:padding="20dp"
                android:singleLine="true"
                android:textColor="@color/Black"
                android:textColorHint="@color/hint_text"
                android:textSize="11sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edt_signup_lastname"
                style="@style/StyledTilEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/Last_Name"
                android:padding="20dp"
                android:singleLine="true"
                android:textColor="@color/Black"
                android:textColorHint="@color/hint_text"
                android:textSize="11sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_emailsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_signup_email"
                style="@style/StyledTilEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:singleLine="true"
                android:textColor="@color/Black"
                android:textColorHint="@color/hint_text"
                android:textSize="11sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_passwordsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edt_signup_password"
                style="@style/StyledTilEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/Black"
                android:textColorHint="@color/hint_text"
                android:textSize="11sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_birthdat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_signup_birthday"
                style="@style/StyledTilEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/DOB"
                android:inputType="date"
                android:padding="20dp"
                android:singleLine="true"
                android:textColor="@color/Black"
                android:textColorHint="@color/hint_text"
                android:textSize="11sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_signup_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="6dp"
            android:text="@string/Gender"
            android:textColor="@color/Black"
            android:textSize="11sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/StyledTilEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:checked="true"
                android:text="@string/Male"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioFemale"
                style="@style/StyledTilEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Female"
                android:textSize="12sp" />

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_signup_create"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/Black"
        android:gravity="center"
        android:text="@string/SignUp"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_signup_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Sign"
            android:textColor="@color/hint_text"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/txt_signup_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/SIGN_IN"
            android:textColor="@color/Black"
            android:textSize="11sp" />


    </LinearLayout>

</LinearLayout>