<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="145dp"
        android:layout_gravity="center"
        android:src="@mipmap/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_login_email"
            style="@style/StyledTilEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/Black"
            android:textColorHint="@color/hint_text"
            android:textSize="11sp" />
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_login_password"
                style="@style/StyledTilEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/Black"
                android:textColorHint="@color/hint_text"
                android:textSize="11sp" />
        </android.support.design.widget.TextInputLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/txt_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right|bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="220dp"
        android:gravity="center|right"
        android:text="Forgot Password?"
        android:textColor="@color/hint_text"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/txt_login_signin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/Black"
        android:gravity="center"
        android:text="@string/Sign_In"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_login_signup_account"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/dont_have_ac"
            android:textColor="@color/hint_text"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/txt_login_signup_link"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/SignUp"
            android:textColor="@color/Black"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_login_facebook_login"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:src="@mipmap/ic_facebook_black" />

        <ImageView
            android:id="@+id/img_google_login"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:src="@mipmap/ic_gplus_black" />
    </LinearLayout>

</LinearLayout>